--- a/.gitconfig
+++ b/.gitconfig
@@ -6,4 +6,5 @@
 [alias]
 	st = status --short
 	lg = log --oneline --decorate --graph
+	lgl = log --oneline --decorate --graph --stat
 	cm = commit -m 
